<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/form_register_header"
            android:textSize="30dp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/login_header" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:text="@string/login_placeholder" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/password_header" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:text="@string/password_placeholder" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/password_repeat_header" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:text="@string/password_repeat_placeholder" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/email_header" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:text="@string/email_placeholder" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />

    </TableRow>

</TableLayout>